UtahLiveDataTest/src/objects/r_mjr_prog__c.object
<CustomObject>
    <fields>
        <fullName>ACT_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Active</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALW_BUD_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Budgeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEPT_CD_TEXT__c</fullName>
        <formula>DEPT_CD__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPT_CD_TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPT_CD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FINETMajorPrograms</relationshipLabel>
        <relationshipName>FINETMajorPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DrawndownGroup__c</fullName>
        <label>Drawndown Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTo__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>MRJ_PROG_CD+DEPT_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FED_APPR_SETP__c</fullName>
        <label>Federal Appropriation Setup</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrantID__c</fullName>
        <label>Grant ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ID 1</fullName>
                </value>
                <value>
                    <fullName>ID 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalVendor__c</fullName>
        <label>Internal Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MJR_PROG_CD__c</fullName>
        <label>Major Program Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MJR_PROG_NM__c</fullName>
        <label>MajorProgramName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MJR_PROG_SH_NM__c</fullName>
        <label>Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REIM_BAS_IND__c</fullName>
        <label>Reporting Basis</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REIM_BUD_STRU_CD__c</fullName>
        <label>Reimb Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReclassExclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclass Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPLT_IND__c</fullName>
        <label>Split Type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUSP_STA__c</fullName>
        <label>Reimb Status</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageDefinition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StreamlinedTaskOrderBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Streamlined Task Order Billing</label>
        <type>Checkbox</type>
    </fields>
    <label>FINETMajorProgram</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Major Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINETMajorPrograms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>